imported code and created functions

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,4 +11,17 @@
 }
 .blue {
   background-color: blue;
+  display: inline-block;
+}
+
+.column {
+  display: inline-block;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
 }
